#+title: ultra-scroll - Changelog
#+author: J.D. Smith
#+language: en

* v0.4.2 (2025-07-14)

- Released on MELPA.

* 0.4.1 (2025-06-09)

- Work around redisplay bugs when the cursor is partially visible, which can lead to ~redisplay~ slowdowns of 150-500x.
- Guard against ~posn-x-y~ returning ~nil~ on discovered position.

* v0.4 (2025-05-05)

- Support ~scroll-conservatively~ < 100, altering the value temporarily during scroll.  Note that ~scroll-margin~ = 0 is still required.
- Do not rely on ~:phase~ information from the mouse events, since only certain hardware on mac provides it.

* v0.3.5 (2025-04-17)

- Fix freeze when scrolling down /very/ short windows like few-line child frame tooltips (#30).
  
* v0.3.4 (2025-04-02)

- Correctly handle very large scroll-down deltas, which may occur for ultra-fast mice wheels with short windows.

* v0.3.3 (2025-03-11)

- Do not move point to ~point-min/max~ when scroll reaches buffer beginning/end, unless the cursor has been hidden.

* v0.3.2 (2025-01-26)

- Re-enable ~make-cursor-line-fully-visible~, which recent versions of ~pixel-scroll-precision-mode~ disable.

* v0.3.1 (2025-01-18)

- Add ~ultra-scroll-hide-functions~ hook, to support disabling/re-enabling arbitrary modes or calling other functions when scrolling starts/stops.
- Doc improvements.

* v0.3 (2025-01-12)

- Hide cursor (and ~hl-line~) during scrolls by default.  See ~ultra-scroll-hide-cursor~.  Thanks to @minad; see #15.
- Put custom variables in group ~scrolling~.
- Improve ~ultra-scroll-check~:
  + Correctly interrogate a group of wheel events to determine if they are "real" or fake.  Some Linux systems report ~PIXEL-DELTA~'s with fixed values (a line height), which effectively reverts ~ultra-scroll~ to line-by-line scrolling.
  + Guard against up+down scrolling falsely indicating diverse scrolls pixel offsets.
  + Report event timing (how fast /is/ your mouse)?